@@ -111,19 +111,13 @@ void IngameChatWidget::appendIGChatLine(const std::string& line, EmberEntity* en
 			chatWindow = CEGUI::WindowManager::getSingleton().loadWindowLayout((CEGUI::utf8*)"cegui/widgets/IngameChatWidget.xml", std::string("IngameChatWidget/") + entity->getId() + "/");
 			getMainSheet()->addChildWindow(chatWindow);
 			
-			ActiveChatWindow activeWindow;
-			activeWindow.window = chatWindow;
-			activeWindow.entity = physicalEntity;
-			activeWindow.elapsedTimeSinceLastUpdate = 0.0f;
-			activeWindow.windowManager = mWindowManager;
+			ActiveChatWindow* activeWindow = new ActiveChatWindow(chatWindow, physicalEntity, mWindowManager);
 			
-			placeWindowOnEntity(chatWindow, physicalEntity);
 			mActiveChatWindows[physicalEntity->getId()] = activeWindow;
 			
-			activeWindow.appendIGChatLine(line);
+			mActiveChatWindows[physicalEntity->getId()]->updateText(line);
 		} else {
-			I->second.elapsedTimeSinceLastUpdate = 0.0f;
-			I->second.appendIGChatLine(line);
+			I->second->updateText(line);
 /*			chatWindow = I->second.window;*/
 		}
 		
@@ -140,24 +134,6 @@ void IngameChatWidget::appendIGChatLine(const std::string& line, EmberEntity* en
 
 
 
-void IngameChatWidget::placeWindowOnEntity( CEGUI::Window* window, EmberPhysicalEntity* entity)
-{
-	//make sure that the window stays on the entity
-	Ogre::Vector3 screenCoords;
-/*	Ogre::Vector3 entityWorldCoords = entity->getSceneNode()->_getWorldAABB().getCenter();
-	
-	Ogre::Vector3 entityWorldCoords = entity->getSceneNode()->getWorldPosition();*/
-//	entity->_update();
-	Ogre::Vector3 entityWorldCoords = entity->getModel()->getWorldBoundingBox(true).getCenter();
-	//check what the new position is in screen coords
-	bool result = EmberOgre::getSingletonPtr()->getMainCamera()->worldToScreen(entityWorldCoords, screenCoords);
-	if (result) {
-		window->setVisible(true);
-		window->setPosition(CEGUI::Point(screenCoords.x - (window->getWidth() * 0.5), screenCoords.y - (window->getHeight() * 0.5)));
-	} else {
-		window->setVisible(false);
-	}
-}
 
 
 
@@ -168,34 +144,33 @@ void IngameChatWidget::frameStarted( const Ogre::FrameEvent & event )
 	std::vector<std::string> windowsToRemove;
 	
 	for (;I != I_end; ++I) {
-		ActiveChatWindow* window = &(I->second);
-		
-		placeWindowOnEntity(window->window, window->entity);
-		
-		window->elapsedTimeSinceLastUpdate += event.timeSinceLastFrame;
-		
-		Ogre::Vector3 entityWorldCoords = window->entity->getModel()->getWorldBoundingBox(true).getCenter();
+		ActiveChatWindow* window = I->second;
+		window->frameStarted(event );
+
+		Ogre::Vector3 entityWorldCoords = window->getEntity()->getModel()->getWorldBoundingBox(true).getCenter();
 		Ogre::Vector3 cameraCoords = EmberOgre::getSingletonPtr()->getMainCamera()->getCamera()->getDerivedPosition();
 		Ogre::Vector3 diff = entityWorldCoords - cameraCoords;
 		
 		if (diff.length() > distanceShown) {
 			windowsToRemove.push_back(I->first);
 		} else {
+		
 			//unless timeShown is 0 windows will fade over time
 			if (timeShown != 0) {
 				//make the windows fade over time
-				window->window->setAlpha(1 - (window->elapsedTimeSinceLastUpdate / timeShown));
-				if (window->elapsedTimeSinceLastUpdate >= timeShown) {
+				window->getWindow()->setAlpha(1 - (window->getElapsedTimeSinceLastUpdate() / timeShown));
+				if (window->getElapsedTimeSinceLastUpdate() >= timeShown) {
 					windowsToRemove.push_back(I->first);
 				}
 			}
 		}
 	}
 	
-	std::vector<std::string>::const_iterator J = windowsToRemove.begin();
-	std::vector<std::string>::const_iterator J_end = windowsToRemove.end();
+	std::vector<std::string>::iterator J = windowsToRemove.begin();
+	std::vector<std::string>::iterator J_end = windowsToRemove.end();
 	for (;J != J_end; ++J) {
-		mWindowManager->destroyWindow(mActiveChatWindows[*J].window);
+//		mWindowManager->destroyWindow(mActiveChatWindows[*J].window);
+		delete mActiveChatWindows[*J];
 		mActiveChatWindows.erase(*J);
 	}	
 	
@@ -218,29 +193,30 @@ bool EmberOgre::IngameChatWidget::ActiveChatWindow::buttonResponse_Click(const C
 	return true;
 }
 
-void EmberOgre::IngameChatWidget::ActiveChatWindow::appendIGChatLine( const std::string & line )
+void EmberOgre::IngameChatWidget::ActiveChatWindow::updateText( const std::string & line )
 {
 
-	CEGUI::StaticText* textWidget = static_cast<CEGUI::StaticText*>(window->getChild(std::string("IngameChatWidget/") + entity->getId() + "/Text"));
+	CEGUI::StaticText* textWidget = static_cast<CEGUI::StaticText*>(mWindow->getChild(std::string("IngameChatWidget/") + mEntity->getId() + "/Text"));
 	textWidget->setText(line);
+	mElapsedTimeSinceLastUpdate = 0;
 	
-	if (entity->hasSuggestedResponses())
+	if (mEntity->hasSuggestedResponses())
 	{
-		CEGUI::Window* responseWidget = static_cast<CEGUI::Window*>(window->getChild(std::string("IngameChatWidget/") + entity->getId() + "/" + "ResponseList"));
+		CEGUI::Window* responseWidget = static_cast<CEGUI::Window*>(mWindow->getChild(std::string("IngameChatWidget/") + mEntity->getId() + "/" + "ResponseList"));
 			
 		
 		//remove all existing response windows
-		std::vector<CEGUI::Window*>::const_iterator responses_I = responseTextWidgets.begin();
-		std::vector<CEGUI::Window*>::const_iterator responses_I_end = responseTextWidgets.end();
+		std::vector<CEGUI::Window*>::const_iterator responses_I = mResponseTextWidgets.begin();
+		std::vector<CEGUI::Window*>::const_iterator responses_I_end = mResponseTextWidgets.end();
 		for (; responses_I != responses_I_end; ++responses_I)
 		{
-			windowManager->destroyWindow(*responses_I);
+			mWindowManager->destroyWindow(*responses_I);
 		}
-		responseTextWidgets.clear();
+		mResponseTextWidgets.clear();
 		
 
 		//for each response, create a button
-		std::vector<std::string> responses = entity->getSuggestedResponses();
+		std::vector<std::string> responses = mEntity->getSuggestedResponses();
 		std::vector<std::string>::const_iterator I = responses.begin();
 		std::vector<std::string>::const_iterator I_end = responses.end();
 		int i = 0;
@@ -250,7 +226,7 @@ void EmberOgre::IngameChatWidget::ActiveChatWindow::appendIGChatLine( const std:
 		{
 			std::stringstream ss_;
 			ss_ << i;
-			CEGUI::StaticText* responseText = static_cast<CEGUI::StaticText*>(windowManager->createWindow((CEGUI::utf8*)"TaharezLook/StaticText", std::string("IngameChatWidget/") + entity->getId() + "/Response/" + ss_.str()));
+			CEGUI::StaticText* responseText = static_cast<CEGUI::StaticText*>(mWindowManager->createWindow((CEGUI::utf8*)"TaharezLook/StaticText", std::string("IngameChatWidget/") + mEntity->getId() + "/Response/" + ss_.str()));
 			
 			
 			
@@ -263,7 +239,7 @@ void EmberOgre::IngameChatWidget::ActiveChatWindow::appendIGChatLine( const std:
 			responseText->setHorizontalFormatting(CEGUI::StaticText::WordWrapLeftAligned);
 			responseText->setFrameEnabled(false);
 			responseWidget->addChildWindow(responseText);
-			responseTextWidgets.push_back(responseText);
+			mResponseTextWidgets.push_back(responseText);
 			
 			++i;
 			
@@ -274,3 +250,59 @@ void EmberOgre::IngameChatWidget::ActiveChatWindow::appendIGChatLine( const std:
 	}
 
 }
+
+EmberOgre::IngameChatWidget::ActiveChatWindow::ActiveChatWindow( CEGUI::Window * window, EmberPhysicalEntity * entity, CEGUI::WindowManager * windowManager )
+ : mWindow(window), mEntity(entity), mWindowManager(windowManager), mElapsedTimeSinceLastUpdate(0.0f)
+{
+	placeWindowOnEntity();
+}
+
+EmberOgre::IngameChatWidget::ActiveChatWindow::~ActiveChatWindow()
+{
+	mWindowManager->destroyWindow(mWindow);
+}
+
+
+void EmberOgre::IngameChatWidget::ActiveChatWindow::placeWindowOnEntity()
+{
+	//make sure that the window stays on the entity
+	Ogre::Vector3 screenCoords;
+/*	Ogre::Vector3 entityWorldCoords = entity->getSceneNode()->_getWorldAABB().getCenter();
+	
+	Ogre::Vector3 entityWorldCoords = entity->getSceneNode()->getWorldPosition();*/
+//	entity->_update();
+	Ogre::Vector3 entityWorldCoords = mEntity->getModel()->getWorldBoundingBox(true).getCenter();
+	//check what the new position is in screen coords
+	bool result = EmberOgre::getSingletonPtr()->getMainCamera()->worldToScreen(entityWorldCoords, screenCoords);
+	if (result) {
+		mWindow->setVisible(true);
+		mWindow->setPosition(CEGUI::Point(screenCoords.x - (mWindow->getWidth() * 0.5), screenCoords.y - (mWindow->getHeight() * 0.5)));
+	} else {
+		mWindow->setVisible(false);
+	}
+}
+void EmberOgre::IngameChatWidget::ActiveChatWindow::frameStarted( const Ogre::FrameEvent & event )
+{
+	placeWindowOnEntity();
+	
+	increaseElapsedTime(event.timeSinceLastFrame);
+	
+
+}
+
+EmberOgre::EmberPhysicalEntity * EmberOgre::IngameChatWidget::ActiveChatWindow::getEntity( )
+{
+	return mEntity;
+}
+
+CEGUI::Window * EmberOgre::IngameChatWidget::ActiveChatWindow::getWindow( )
+{
+	return mWindow;
+}
+
+void EmberOgre::IngameChatWidget::ActiveChatWindow::increaseElapsedTime( float timeSlice )
+{
+	mElapsedTimeSinceLastUpdate += timeSlice;
+}
+
+
